[gd_scene load_steps=5 format=3 uid="uid://3ugbuu6kvqtb"]

[ext_resource type="Script" path="res://scripts/work.gd" id="1_ibbcd"]
[ext_resource type="Texture2D" uid="uid://bhsabtvf1ajqq" path="res://images/work/1588704045_matrix-screen-min.jpg" id="2_du8v6"]
[ext_resource type="Texture2D" uid="uid://bn10ts4oy204c" path="res://images/back.png" id="2_gvs5o"]
[ext_resource type="Texture2D" uid="uid://crqu7mbvhk7qo" path="res://images/back_hover.png" id="3_7a6v2"]

[node name="Work" type="Node2D"]
script = ExtResource("1_ibbcd")

[node name="1588704045Matrix-screen-min" type="Sprite2D" parent="."]
position = Vector2(376, 424)
scale = Vector2(1.48111, 2.01364)
texture = ExtResource("2_du8v6")

[node name="LangsScroll" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(10, 728)
offset_left = 8.0
offset_top = 104.0
offset_right = 648.0
offset_bottom = 424.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="LangBox" type="VBoxContainer" parent="LangsScroll"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="BackButton" type="TextureButton" parent="."]
self_modulate = Color(0, 0.734863, 0, 1)
offset_right = 512.0
offset_bottom = 512.0
scale = Vector2(0.15, 0.15)
button_mask = 7
texture_normal = ExtResource("2_gvs5o")
texture_pressed = ExtResource("3_7a6v2")
texture_hover = ExtResource("3_7a6v2")
texture_disabled = ExtResource("2_gvs5o")
texture_focused = ExtResource("3_7a6v2")

[connection signal="button_down" from="BackButton" to="." method="_on_back_button_button_down"]
